"Masz już konto? Zaloguj się" button fix

--- a/Frontend/Core/Components/Pages/Register.razor
+++ b/Frontend/Core/Components/Pages/Register.razor
@@ -67,7 +67,7 @@ else
 
                 <div class="text-center mt-3">
                     <span>Masz już konto? </span>
-                    <a href="/logowanie">Zaloguj się</a>
+                    <a href="/login">Zaloguj się</a>
                 </div>
             </div>
         </div>
