Big services update

--- a/Frontend/Core/Components/Pages/FAQ.razor
+++ b/Frontend/Core/Components/Pages/FAQ.razor
@@ -2,87 +2,157 @@
 
 <ol class="pb-10">
     <li>
-        <div class="fw-bold">Jak długo trwa operacja?</div>
+        <div class="fw-bold">Kiedy i gdzie mogę uzyskać pomoc w nagłym przypadku?</div>
         <div class="d-flex align-items-start mt-2">
             <i class="bi bi-arrow-right-circle me-2"></i>
-            <span>Ok. 1,5 - 3h.</span>
+            <span>W nagłych sytuacjach zgłoś się na SOR – działa całodobowo.</span>
         </div>
     </li>
     <li>
-        <div class="fw-bold">Jaki rodzaj endoprotezy zostanie w moim zabiegu użyty?</div>
+        <div class="fw-bold">Czy szpital ma SOR?</div>
         <div class="d-flex align-items-start mt-2">
             <i class="bi bi-arrow-right-circle me-2"></i>
-            <span>Od rodzaju użytej endoprotezy decyduje lekarz ortopeda. Dobierana jest ona indywidualnie w zależności od stanu kości, stanu zdrowia pacjenta, wieku oraz poziomu aktywności.</span>
+            <span>Tak, działa 24/7 w przypadkach zagrożenia życia lub zdrowia.</span>
         </div>
     </li>
     <li>
-        <div class="fw-bold">Czy będę musiał wymieniać moją endoprotezę?</div>
+        <div class="fw-bold">SOR czy Nocna i Świąteczna Pomoc Lekarska – gdzie się zgłosić?</div>
         <div class="d-flex align-items-start mt-2">
             <i class="bi bi-arrow-right-circle me-2"></i>
-            <span>Jest to kwestia indywidualna. Endoprotezę wymienia się co ok 15 - 30 lat.</span>
+            <span>SOR: w sytuacjach nagłego zagrożenia życia (np. utrata przytomności, duszność, uraz głowy, silny ból w klatce piersiowej). Nocna i Świąteczna Pomoc Lekarska: w razie nagłego zachorowania lub pogorszenia stanu zdrowia poza godzinami pracy lekarza rodzinnego (np. gorączka, silny ból, infekcja)</span>
         </div>
     </li>
     <li>
-        <div class="fw-bold">Czy muszę się odchudzać przed operacją?</div>
+        <div class="fw-bold">Kiedy nie uzyskam pomocy w ramach SOR lub Nocnej Pomocy?</div>
         <div class="d-flex align-items-start mt-2">
             <i class="bi bi-arrow-right-circle me-2"></i>
-            <span>Jeśli twoja waga przekracza normę, warto przed operacją udać się do dietetyka w celu zredukowania masy ciała. Zmniejszy to ryzyko powikłań pooperacyjnych.</span>
+            <span>Nie otrzymasz pomocy w przypadku: wizyt kontrolnych; potrzeby wypisania recepty na leki przyjmowane przewlekle; wystawienia skierowania lub zaświadczenia o stanie zdrowia.</span>
         </div>
     </li>
     <li>
-        <div class="fw-bold">Czy mogę wykrwawić się podczas operacji?</div>
+        <div class="fw-bold">Jak wygląda planowe przyjęcie do szpitala?</div>
         <div class="d-flex align-items-start mt-2">
             <i class="bi bi-arrow-right-circle me-2"></i>
-            <span>Decyzję o dopuszczeniu do zabiegu podejmuje lekarz prowadzący wraz z zespołem medycznym. Przed planowaną operacją wykonuje się szereg badań i konsultacji w celu zminimalizowania ryzyka. Każda operacja wiąże się z możliwością powikłań, dlatego wszelkie wątpliwości należy skonsultować z lekarzem. Pacjent przed zabiegiem otrzymuje dokumentację, w której wyraża zgodę na zabieg.</span>
+            <span>Termin ustala lekarz oddziału. Zgłaszasz się rano do Centralnej Izby Przyjęć z wymaganymi rzeczami i dokumentami.</span>
         </div>
     </li>
     <li>
-        <div class="fw-bold">Czy po operacji mogę dostać zakrzepicy?</div>
+        <div class="fw-bold">Jakie dokumenty zabrać do szpitala?</div>
         <div class="d-flex align-items-start mt-2">
             <i class="bi bi-arrow-right-circle me-2"></i>
-            <span>W celu zminimalizowania zakrzepicy pacjenci po zabiegach operacyjnych otrzymują indywidualnie dobrane leki oraz wykonują ćwiczenia przeciwzakrzepowe. Czasami dodatkowo zaleca się noszenie pończoch uciskowych.</span>
+            <span>Dowód osobisty, skierowanie, dokumentacja medyczna, lista przyjmowanych leków.</span>
         </div>
     </li>
     <li>
-        <div class="fw-bold">Czy w wyniku operacji mogę stracić czucie w kończynach?</div>
+        <div class="fw-bold">Co zabrać ze sobą na pobyt?</div>
         <div class="d-flex align-items-start mt-2">
             <i class="bi bi-arrow-right-circle me-2"></i>
-            <span>Jednym z powikłań operacyjnych może być uszkodzenie nerwu skutkujące zaburzeniami czucia w jego obszarze. Jest to stosunkowo rzadkie powikłanie, jednakże może się zdarzyć. Pacjent zostaje o tym poinformowany przed operacją i wypełnia zgodę świadczącą o tym, że zapoznał się z możliwymi powikłaniami.</span>
+            <span>Rzeczy osobiste: piżama, kapcie, ręcznik, przybory toaletowe, kubek, sztućce.</span>
         </div>
     </li>
     <li>
-        <div class="fw-bold">Jak długo będę w szpitalu po operacji?</div>
+        <div class="fw-bold">Czy można odwiedzać pacjentów?</div>
         <div class="d-flex align-items-start mt-2">
             <i class="bi bi-arrow-right-circle me-2"></i>
-            <span>Pobyt w szpitalu po operacji trwa zazwyczaj 3-7 dni, jednak wszystko zależy od stanu pacjenta. W przypadkach, kiedy wystąpiły ciężkie powikłania pobyt może się przedłużyć.</span>
+            <span>Tak, zgodnie z harmonogramem oddziału. Szczegóły ustal z personelem.</span>
         </div>
     </li>
     <li>
-        <div class="fw-bold">Kiedy będę mógł chodzić?</div>
+        <div class="fw-bold">Jak skontaktować się z pacjentem?</div>
         <div class="d-flex align-items-start mt-2">
             <i class="bi bi-arrow-right-circle me-2"></i>
-            <span>Pionizacja pacjentów najczęściej odbywa się w pierwszej dobie po operacji, a chodzenie w kolejnych dniach. Jest to jednak kwestia indywidualna i zależy od przebiegu operacji, powikłań rodzaju endoprotezy i ogólnego stanu zdrowia pacjenta.</span>
+            <span>Zadzwoń do sekretariatu oddziału – numer telefonu uzyskasz w rejestracji.</span>
         </div>
     </li>
     <li>
-        <div class="fw-bold">Czy będę potrzebował pomocy w domu po operacji?</div>
+        <div class="fw-bold">Czy rodzina może przekazać rzeczy pacjentowi?</div>
         <div class="d-flex align-items-start mt-2">
             <i class="bi bi-arrow-right-circle me-2"></i>
-            <span>Pomoc po operacji jest bardzo przydatna. Warto zaopatrzeć się wcześniej w chwytak i podwyższające nakładki na sedes oraz krzesła.</span>
+            <span>Tak, przez personel oddziału lub osobiście w godzinach odwiedzin.</span>
         </div>
     </li>
     <li>
-        <div class="fw-bold">Kiedy będę mógł wrócić do pracy?</div>
+        <div class="fw-bold">Czy przy szpitalu jest parking?</div>
         <div class="d-flex align-items-start mt-2">
             <i class="bi bi-arrow-right-circle me-2"></i>
-            <span>Okres rekonwalescencji zależy od przebiegu operacji, typu użytej endoprotezy, powikłań, ogólnego stanu zdrowia oraz rehabilitacji. Zazwyczaj trwa on od 6 tygodni do 6 miesięcy.</span>
+            <span>Tak, płatny – dostępny dla pacjentów i gości.</span>
         </div>
     </li>
     <li>
-        <div class="fw-bold">Czy będę mógł uprawiać sportowo zabiegu?</div>
+        <div class="fw-bold">Czy szpital jest przystosowany dla osób z niepełnosprawnością?</div>
         <div class="d-flex align-items-start mt-2">
             <i class="bi bi-arrow-right-circle me-2"></i>
-            <span>Tak, jednak warto to skonsultować z lekarzem oraz fizjoterapeutą. Należy unikać skoków oraz sportów kontaktowych, ponieważ grozi to zwichnięciem endoprotezy.</span>
+            <span>Tak, są podjazdy, windy osobowe i udogodnienia na oddziałach.</span>
+        </div>
+    </li>
+    <li>
+        <div class="fw-bold">Czy w szpitalu jest winda?</div>
+        <div class="d-flex align-items-start mt-2">
+            <i class="bi bi-arrow-right-circle me-2"></i>
+            <span>Tak, we wszystkich budynkach dostępne są windy osobowe.</span>
+        </div>
+    </li>
+    <li>
+        <div class="fw-bold">Czy w szpitalu jest apteka?</div>
+        <div class="d-flex align-items-start mt-2">
+            <i class="bi bi-arrow-right-circle me-2"></i>
+            <span>Tak, apteka szpitalna – zapytaj o lokalizację w rejestracji.</span>
+        </div>
+    </li>
+    <li>
+        <div class="fw-bold">Czy w szpitalu mogę kupić sprzęt ortopedyczny?</div>
+        <div class="d-flex align-items-start mt-2">
+            <i class="bi bi-arrow-right-circle me-2"></i>
+            <span>Tak, działa sklep z zaopatrzeniem ortopedycznym – zapytaj o lokalizację.</span>
+        </div>
+    </li>
+    <li>
+        <div class="fw-bold">Czy w szpitalu jest paczkomat?</div>
+        <div class="d-flex align-items-start mt-2">
+            <i class="bi bi-arrow-right-circle me-2"></i>
+            <span>Tak, InPost – hol główny, wejście C, naprzeciw sklepu ortopedycznego. Pojemność: 72 przesyłki.</span>
+        </div>
+    </li>
+    <li>
+        <div class="fw-bold">Czy w pobliżu są inne usługi?</div>
+        <div class="d-flex align-items-start mt-2">
+            <i class="bi bi-arrow-right-circle me-2"></i>
+            <span>Apteka: ul. Modrzewskiego 5a (550 m), Bankomat: Pl. Jana Pawła II (650 m), Poczta: ul. Mickiewicza 22 (550 m); Taksówka: zadzwoń z portierni lub wew. 900.</span>
+        </div>
+    </li>
+    <li>
+        <div class="fw-bold">Czy w szpitalu jest internet?</div>
+        <div class="d-flex align-items-start mt-2">
+            <i class="bi bi-arrow-right-circle me-2"></i>
+            <span>Tak, bezpłatne Wi-Fi. Dane dostępowe na tablicach informacyjnych.</span>
+        </div>
+    </li>
+    <li>
+        <div class="fw-bold">Czy w salach są telewizory?</div>
+        <div class="d-flex align-items-start mt-2">
+            <i class="bi bi-arrow-right-circle me-2"></i>
+            <span>Tak. Opłata wg cennika.</span>
+        </div>
+    </li>
+    <li>
+        <div class="fw-bold">Jak wygląda wyżywienie?</div>
+        <div class="d-flex align-items-start mt-2">
+            <i class="bi bi-arrow-right-circle me-2"></i>
+            <span>Śniadanie: 8:00–9:00; Obiad: 13:00–14:00; Kolacja: 17:00–18:00. Można zamówić dodatkowy posiłek z restauracji "Hotel nad Mrogą". Menu u personelu.</span>
+        </div>
+    </li>
+    <li>
+        <div class="fw-bold">Czy mogę przechowywać jedzenie?</div>
+        <div class="d-flex align-items-start mt-2">
+            <i class="bi bi-arrow-right-circle me-2"></i>
+            <span>Tak, lodówki są dostępne na każdym oddziale. Opisz żywność imieniem i nazwiskiem. Przeterminowana żywność jest usuwana.</span>
+        </div>
+    </li>
+    <li>
+        <div class="fw-bold">Czy w szpitalu są organizowane ćwiczenia ewakuacyjne?</div>
+        <div class="d-flex align-items-start mt-2">
+            <i class="bi bi-arrow-right-circle me-2"></i>
+            <span>Tak. Prowadzone są okresowo. W razie ćwiczeń zachowaj spokój i postępuj zgodnie z instrukcjami personelu.</span>
         </div>
     </li>
 </ol>
