--- a/Frontend/Core/Components/Pages/Map.razor
+++ b/Frontend/Core/Components/Pages/Map.razor
@@ -3,17 +3,12 @@
 
 <h3>Mapa piętra (SVG)</h3>
 
-<div style="width: 100%; height: 600px; overflow: auto; border: 1px solid #ccc;">
+<div style="width: 100%; height: 90vh; overflow: auto; border: 1px solid #ccc;">
     <object id="svgObject"
             type="image/svg+xml"
-            data="/Images/map/map0.svg"
+            data="/images/map/map0.svg"
             style="min-width: 1000px; min-height: 800px;">
     </object>
-</div>
-
-<div id="labelOutput"
-     style="margin-top: 20px; padding: 10px; border: 1px solid #aaa; background-color: #f9f9f9;">
-    <strong>Ścieżka do pliku:</strong> <span>@ImagePath</span>
 </div>
 
 <Core.Components.Dialogs.TemplatedDialog IsHidden="string.IsNullOrEmpty(ImagePath)" OnClose="CloseDialog">
@@ -105,7 +100,7 @@
     public Task OnSvgCircleClicked(string path)
     {
         ImageName = path;
-        ImagePath = $"Images/map/spheres/{path}";
+        ImagePath = $"images/map/spheres/{path}";
         PreviousImage = GetRelativeImage(-1);
         NextImage = GetRelativeImage(1);
         StateHasChanged();
